# BookBuy

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/xyz/torquato/bookbuy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/xyz/torquato/bookbuy/: FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/java/xyz/torquato/bookbuy/concurrency/: IOExecutor.java
app/src/main/java/xyz/torquato/bookbuy/core/: BookApp.java
app/src/main/java/xyz/torquato/bookbuy/data/: BookDataSource.java  BookRepository.java
app/src/main/java/xyz/torquato/bookbuy/di/: DataModule.java
app/src/main/java/xyz/torquato/bookbuy/domain/: BookItem.java  GetContentUseCase.java  GetSelectedItemUseCase.java  PerformFavoriteUseCase.java  QueryData.java  SelectedBookItem.java  SetQueryUseCase.java  SetSelectedItemIdUseCase.java
app/src/main/java/xyz/torquato/bookbuy/ui/: FirstFragment.java  SecondFragment.java
app/src/main/res/drawable/: text_field_shape.xml
app/src/main/res/layout/: detailed_view.xml  fragment_first.xml  fragment_second.xml  text_row_item.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/xyz/torquato/bookbuy/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+41 files in other folders)
